/** Responsible for validating the Node Agentâ€™s Attested Data. */

syntax = "proto3";
package spire.agent.nodeattestor;
option go_package = "nodeattestor";

import public "github.com/spiffe/spire/pkg/common/plugin/plugin.proto";
import public "github.com/spiffe/spire/pkg/common/common.proto";

/** Represents a request to attest a node. */
message AttestRequest {
    /** A type which contains attestation data for specific platform. */
    spire.common.AttestedData attestedData = 1;
    /** Is true if the Base SPIFFE ID is present in the Attested Node table. */
    bool attestedBefore = 2;
}

/** Represents a response when attesting a node.*/
message AttestResponse {
    /** True/False */
    bool valid = 1;
    /** Used for the Control Plane to validate the SPIFFE Id in the Certificate signing request. */
    string baseSPIFFEID = 2;
}

service NodeAttestor {
    /** Attesta a node. */
    rpc Attest(AttestRequest) returns (AttestResponse);

    /** Responsible for configuration of the plugin. */
    rpc Configure(spire.common.plugin.ConfigureRequest) returns (spire.common.plugin.ConfigureResponse);
    /** Returns the  version and related metadata of the installed plugin. */
    rpc GetPluginInfo(spire.common.plugin.GetPluginInfoRequest) returns (spire.common.plugin.GetPluginInfoResponse);
}
